@@ -626,6 +626,13 @@ n : <b>limited</b> <b>command</b> := l;<br>
         </div>
         </center>
 
+<p>The purpose of command types is improve reliability in scripts.
+In a sense, they are shell aliases in that they can rename commands to
+run.  They can be used for aliasing commands at the command prompt.
+However, they are not intended to replace shell aliases.  The best
+way to create the equivalent of shell aliases is to write your new
+commands as external scripts.</p>
+
 <h3>JSON and SparForte Types</h3>
 
 <p>JSON is an acronym for JavaScript Object Notation.  It is an easier-to-use
