@@ -48,6 +48,22 @@ tutorial is a simple introduction to SparForte by using SparForte to perform
 interactive math like a pocket calculator.  Then there will be an example
 of running a script.</p>
 
+<p>Although this tutorial does not require specific knowledge, there is
+working knowledge that can explain basic concepts in more detail.</p>
+
+<ul>
+<li><p>The Ada Programming Language</p>
+<p>The basic features of SparForte are based on the Ada programming
+language.  This does not mean that Ada is the same as SparForte and
+you do not need to know Ada.  However, the basic data types and control
+structures are the same.</p>
+<li><p>Bourne Shells and Shell Scripting</p>
+<p>As a shell, SparForte has some compatibility with UNIX Bourne shells
+like Bash and the Korn shell.  Not all features are supported, and
+some features are implemented in a different way.</p>
+</li>
+</ul>
+
 <p>When SparForte is started without an argument, it presents you with a
 welcome
 message and a command prompt, a "<tt>=&gt;</tt>". From this prompt, you
