@@ -1,6 +1,6 @@
 # This should fail
 
 type t is new integer
-  accept
-  end accept; -- empty, should have null
+  affirm
+  end affirm; -- empty, should have null
 
