@@ -57,7 +57,7 @@ random_generator : ada.numerics.float_random.generator;
 chain_count_str   : constant unbounded_string := to_unbounded_string( "chain count" );
 last_in_chain_str : constant unbounded_string := to_unbounded_string( "last in chain" );
 return_value_str  : constant unbounded_string := to_unbounded_string( "return value" );
-accept_clause_str : constant string := "accept clause";
+affirm_clause_str : constant string := "affirm clause";
 sessions_session_variable_name_str : constant unbounded_string := to_unbounded_string( "sessions.session_variable_name" );
 sessions_session_variable_value_str : constant unbounded_string := to_unbounded_string( "sessions.session_variable_value" );
 
@@ -549,8 +549,14 @@ when_t     : identifier;
 while_t    : identifier;
 with_t     : identifier;
 xor_t      : identifier;
-policy_t   : identifier;
+
+------------------------------------------------------------------------------
+--  AdaScript-specific keywords
+------------------------------------------------------------------------------
+
+affirm_t   : identifier;
 configuration_t : identifier;
+policy_t   : identifier;
 
 ------------------------------------------------------------------------------
 --  Built-in Bourne shell commands
