@@ -36,7 +36,7 @@ CHANGES SINCE 2.1
 
 16. Fix: calling a procedure or function with no parameters when parameters were expected produces an appropriate error message.
 
-17. New: types and subtypes may have an accept clause/block to validate values, as in programming-by-contract.
+17. New: types and subtypes may have an affirm clause/block to validate values, as in programming-by-contract.
 
 18. New. raise statements can have a when clause, like an exit statement.
 
@@ -53,4 +53,6 @@ CHANGES SINCE 2.1
 24. Fix: pragma annotate HTML output is html-encoded.
 
 25. Fix: executable statements in blocks no longer allowed type and variable declarations. [verify negative tests]
+
+26. Change: the first word in a statement can be a Bourne shell command with path characters and certain punctuation symbols allowed in the names (e.g. minus).
 
